# jupyter-kernel-client

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  publish.yml
jupyter_kernel_client/: client.py  schema.py
jupyter_kernel_client/models/: __init__.py  v1_kernel.py  v1_kernel_condition.py  v1_kernel_spec.py  v1_kernel_status.py
src/jkclient/: __about__.py  __init__.py  client.py  schema.py
src/jkclient/models/: __init__.py  v1_kernel.py  v1_kernel_condition.py  v1_kernel_spec.py  v1_kernel_status.py
tests/: __init__.py  test_client.py  test_models.py  test_schema.py
